--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 
 <body>
-  <div class="columns-2">
-    <p>Well, let me tell you something, ...</p>
-    <p class="break-after-column">Sure, go ahead, laugh...</p>
-    <p>Maybe we can live without...</p>
-    <p>Look. If you think this is...</p>
+  <div class="grid grid-cols-4 gap-4">
+    <div>01lots of text to check ethat the font setup is correct</div>
+    <!-- ... -->
+    <div>09</div>
   </div>
+
 </body>
