--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href={{ "/assets/css/style.css" | absolute_url }}>
+	<link rel="stylesheet" href={{ absolute_url }}>
 </head>
 
 <body>
