--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href={{ absolute_url }}>
+	<link rel="stylesheet" href="{{ base_url }}/assets/style.css">
 </head>
 
 <body>
