--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="{{ base_url }}/assets/style.css">
+	<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 </head>
 
 <body>
