more relative url changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="nav">
 		<div class="logo">
-			<img class="img" src="/assets/images/nav_logo.svg" />
+			<img class="img" src="{{ relative_ur l} }/assets/images/nav_logo.svg" />
 			Night.WIN
 		</div>
 		<div class="menu">
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<div>
-			<img class="section1__trade-panel" src="/assets/images/trade_panel.png" />
+			<img class="section1__trade-panel" src="{{ relative_url /assets/images/trade_panel.png" />
 		</div>
 	</div>
 </body>
