--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<div>
-			<img class="section1__trade-panel" src="{{ "/assets/images/trade_panel.png" | relative_url" }} />
+			<img class="section1__trade-panel" src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
 		</div>
 	</div>
 </body>
