--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -101,7 +101,7 @@ button {
 
 @font-face {
     font-family: 'Architekt';
-	src: url("/fonts/NBR.otf");
+	src: url("/assets/fonts/NBR.otf");
 }
 
 @media (max-width: 800px) {
