--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,13 +580,13 @@ button {
 }
 
 .section1__title {
-    font-size: 40px;
+    font-size: 50px;
 }
 
 .section1__text {
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 25px;
     color: #888
 }
 
@@ -610,7 +610,7 @@ button {
 
 @font-face {
     font-family: 'Architekt';
-	src: url("/assets/fonts/NBR.otf");
+	src: url("nightwin/assets/fonts/NBR.otf");
 }
 
 @media (max-width: 800px) {
