--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -39,7 +39,6 @@ body {
     display: flex;
     align-items: center;
     gap: 25px;
-
 }
 
 .actions {
@@ -73,13 +72,13 @@ button {
 }
 
 .section1__title {
-    font-size: 50px;
+    font-size: 35px;
 }
 
 .section1__text {
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 25px;
+    font-size: 21px;
     color: #888
 }
 
@@ -95,13 +94,12 @@ button {
 }
 
 .section1__trade-panel {
-    padding-left: 100px;
     object-fit: contain;
 }
 
 @font-face {
     font-family: 'Architekt';
-	src: url("nightwin/assets/fonts/NBR.otf");
+	src: url("/assets/fonts/NBR.otf");
 }
 
 @media (max-width: 800px) {
@@ -116,4 +114,4 @@ button {
     .section1__trade-panel {
         display: none;
     }
-  }
+}
