--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -608,7 +608,7 @@ button {
 
 @font-face {
     font-family: 'Architekt';
-	src: url("nightwin/assets/fonts/NBR.otf");
+	src: url("/assets/fonts/NBR.otf");
 }
 
 @media (max-width: 800px) {
