--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,6 @@
 				<span class="section1__100x">Earn up to 100X</span>
 			</div>
 			<div class="section1__cta">
-
 				<button class="section1__trade">
 					Start Trading
 				</button>
@@ -41,6 +40,28 @@
 		</div>
 		<div>
 			<img class="section1__trade-panel" src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
+		</div>
+	</div>
+
+	<div class="section1">
+		<div>foo</div>
+		<div>
+			<div class="section2__title">
+				Cryptocurrency
+				<br> for Contrarians
+			</div>
+			<div class="section2__text1">
+				Night is designed to provide outsided returns through options on
+				Hex, Pls and other pulsechain tokens.
+			</div>
+			<div class="section2__text2">
+				You only ever risk your initial principal, and can never be liquidated.
+			</div>
+			<div class="section2__text3">
+				Night favors the bold. Earn up to 100x by taking bold,
+				contrarian bets. Create downside insurance for your Pulsechain
+				token portfolio, or craft your own strategy.
+			</div>
 		</div>
 	</div>
 </body>
