section 2 continue work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,9 @@
 	</div>
 
 	<div class="section1">
-		<div>foo</div>
+		<div class="section2__currencies">
+			<img src="{{ "/assets/images/supported_currencies.png" | relative_url }}" />
+		</div>
 		<div>
 			<div class="section2__title">
 				Cryptocurrency
