--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,6 +102,10 @@ button {
     margin-bottom: 10px;
 }
 
+.section2__currencies {
+    margin-right: 10%;
+}
+
 .section2__text1, .section2__text2, .section2__text3 {
     color: #888;
     font-size: 21px;
