--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,34 @@
 			</div>
 		</div>
 	</div>
+
+	<hr>
+
+	<div class="section1">
+		<div>
+			<div class="section1__title">
+				A new way to trade crypto
+			</div>
+			<div class="section1__text">
+				Earn up to 100x on a single bet. Like Hex, The Night contract
+				can always make winners whole and mint more Nmoney.
+			</div>
+			<div class="section1__text">
+				Night pays out Nmoney to those that bet wisely. Like an options
+				contract, those that bet unwisely lose the premium they
+				paid for the option.
+			</div>
+			<div class="section1__text">
+				The top 5% win 100X. Night creates whales from the boldest traders
+			</div>
+			<div class="section1__text">
+				You don't need to bet much to make big returns with night
+			</div>
+		</div>
+		<div>
+			<img class="section1__trade-panel" src="{{ "/assets/images/nmoney.png" | relative_url }}" />
+		</div>
+	</div>
 </body>
 
 </html>
