section text refactor

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,7 +97,7 @@ button {
     object-fit: contain;
 }
 
-.section2__title {
+.section__title {
     font-size: 35px;
     margin-bottom: 10px;
 }
@@ -106,9 +106,9 @@ button {
     margin-right: 10%;
 }
 
-.section2__text1, .section2__text2, .section2__text3 {
+.section__text {
     color: #888;
-    font-size: 20px;
+    font-size: 19px;
     margin-bottom: 3%;
 }
 
