--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,10 +72,6 @@ button {
     margin-bottom: 10%
 }
 
-.section3__content {
-    margin-right: 10%;
-}
-
 .section3__image {
     margin-top: -10%;
 }
@@ -136,7 +132,7 @@ button {
         margin-bottom: 20px;
     }
 
-    .section1__trade-panel, .section2__currencies {
+    .section1__trade-panel, .section2__currencies, .section3__image {
         display: none;
     }
 }
