--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,19 +72,27 @@ button {
     margin-bottom: 10%
 }
 
+.section__title {
+    font-size: 35px;
+    margin-bottom: 10px;
+}
+
+.section__text {
+    color: #888;
+    font-size: 20px;
+    margin-bottom: 3%;
+}
+
+.section3__content {
+    margin-right: 25%;
+}
 .section3__image {
     margin-top: -10%;
+    margin-left: -40%;
 }
 
 .section1__title {
     font-size: 35px;
-}
-
-.section1__text {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 21px;
-    color: #888
 }
 
 .white_text {
@@ -102,19 +110,10 @@ button {
     object-fit: contain;
 }
 
-.section__title {
-    font-size: 35px;
-    margin-bottom: 10px;
-}
+
 
 .section2__currencies {
     margin-right: 10%;
-}
-
-.section__text {
-    color: #888;
-    font-size: 20px;
-    margin-bottom: 3%;
 }
 
 
