--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -106,10 +106,6 @@ button {
     clip-path: polygon(91.52% 0px, 99.99% 12px, 100% 100%, 0px 100%, 0px 0.2%);
 }
 
-.section1__trade-panel {
-    object-fit: contain;
-}
-
 .section2__image {
     margin-right: 10%;
 }
@@ -119,7 +115,13 @@ button {
     text-align: center;
 }
 
-.section4__image {
+.section5 {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 10%;
+}
+
+.section5__image {
     margin-top: -10%;
 }
 
