more style updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,10 @@
 				Craft your options strategy and
 				<span class="white_text">Earn up to 100X</span>
 			</div>
-			<div class="section1__cta">
-				<button class="trade__button">
-					Start Trading
-				</button>
+			<div class="section__cta">
+				<span class="glow">
+					<button class="trade__button">Start Trading</button>
+				</span>
 			</div>
 		</div>
 		<div>
@@ -59,9 +59,9 @@
 			<img src="{{ "/assets/images/supported_currencies.png" | relative_url }}" />
 
 			<div class="section__cta">
-				<button class="trade__button">
-					Start Trading
-				</button>
+				<span class="glow">
+					<button class="trade__button">Start Trading</button>
+				</span>
 			</div>
 		</div>
 		<div>
@@ -107,9 +107,9 @@
 				You don't need to bet muc to make big returns with night
 			</div>
 			<div class="section2__cta">
-				<button class="trade__button">
-					Start Trading
-				</button>
+				<span class="glow">
+					<button class="trade__button">Start Trading</button>
+				</span>
 			</div>
 		</div>
 		<div>
@@ -134,7 +134,7 @@
 			payouts. This lets winners cash out their positions after they successfuly end a bet.
 		</div>
 
-		<img class=""" src="{{ "/assets/images/simulation.png" | relative_url }}" />
+		<img src="{{ "/assets/images/simulation.png" | relative_url }}" />
 	</div>
 
 	<hr>
@@ -146,9 +146,9 @@
 			</div>
 
 			<div class="section__cta">
-				<button class="trade__button">
-					Mint Night Now
-				</button>
+				<span class="glow">
+					<button class="trade__button">Mint Night Now</button>
+				</span>
 			</div>
 		</div>
 
