--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -87,6 +87,10 @@ button {
     margin-bottom: 5%;
 }
 
+.section1__image {
+    margin-top: -14%;
+}
+
 .section3__content {
     margin-right: 25%;
 }
