--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,8 @@
 			</div>
 		</div>
 		<div>
-			<img src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
+			<!-- <img src="{{ "/assets/images/trade_panel.png" | relative_url }}" /> -->
+			<img class="section1__image" src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
 		</div>
 	</div>
 
