--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<title>Night.win: Options on Pulsechain</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="crypto options on Pulsechain">
 	<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 </head>
 
 <body>
 	<div class="nav">
 		<div class="logo">
-			<img class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
+			<img alt="navigation logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
 			Night.WIN
 		</div>
 		<div class="menu">
@@ -43,7 +46,7 @@
 			</div>
 		</div>
 		<div>
-			<img class="section1__image" src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
+			<img alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
 		</div>
 	</div>
 
@@ -56,7 +59,7 @@
 				<br>
 				Currencies:
 			</div>
-			<img src="{{ "/assets/images/supported_currencies.png" | relative_url }}" />
+			<img alt="supported currencies" src="{{ "/assets/images/supported_currencies.png" | relative_url }}" />
 
 			<div class="section__cta">
 				<span class="glow">
@@ -113,7 +116,7 @@
 			</div>
 		</div>
 		<div>
-			<img class="section3__image" src="{{ "/assets/images/nmoney.png" | relative_url }}" />
+			<img alt="nmoney coin" class="section3__image" src="{{ "/assets/images/nmoney.png" | relative_url }}" />
 		</div>
 	</div>
 
@@ -134,7 +137,7 @@
 			payouts. This lets winners cash out their positions after they successfuly end a bet.
 		</div>
 
-		<img src="{{ "/assets/images/simulation.png" | relative_url }}" />
+		<img alt="simulation" src="{{ "/assets/images/simulation.png" | relative_url }}" />
 	</div>
 
 	<hr>
@@ -142,7 +145,7 @@
 	<div class="section">
 		<div class="section4__night">
 			<div>
-				<img class="section5__image" src="{{ "/assets/images/night.png" | relative_url }}" />
+				<img alt="night logo" class="section5__image" src="{{ "/assets/images/night.png" | relative_url }}" />
 			</div>
 
 			<div class="section__cta">
@@ -171,7 +174,7 @@
 
 	<div class="nav">
 		<div class="logo">
-			<img class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
+			<img alt="footer logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
 			Night.WIN
 		</div>
 		<div class="menu">
