--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -135,6 +135,7 @@ button {
 @font-face {
     font-family: 'Architekt';
     src: url("/assets/fonts/NBR.otf");
+    font-display: swap;
 }
 
 @media (max-width: 800px) {
