--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div>
-			<img alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.png" | relative_url }}" />
+			<img alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.webp" | relative_url }}" />
 		</div>
 	</div>
 
@@ -59,7 +59,7 @@
 				<br>
 				Currencies:
 			</div>
-			<img alt="supported currencies" src="{{ "/assets/images/supported_currencies.png" | relative_url }}" />
+			<img alt="supported currencies" src="{{ "/assets/images/supported_currencies.webp" | relative_url }}" />
 
 			<div class="section__cta">
 				<span class="glow">
@@ -116,7 +116,7 @@
 			</div>
 		</div>
 		<div>
-			<img alt="nmoney coin" class="section3__image" src="{{ "/assets/images/nmoney.png" | relative_url }}" />
+			<img alt="nmoney coin" class="section3__image" src="{{ "/assets/images/nmoney.webp" | relative_url }}" />
 		</div>
 	</div>
 
@@ -137,7 +137,7 @@
 			payouts. This lets winners cash out their positions after they successfuly end a bet.
 		</div>
 
-		<img alt="simulation" src="{{ "/assets/images/simulation.png" | relative_url }}" />
+		<img alt="simulation" src="{{ "/assets/images/simulation.webp" | relative_url }}" />
 	</div>
 
 	<hr>
@@ -145,7 +145,7 @@
 	<div class="section">
 		<div class="section4__night">
 			<div>
-				<img alt="night logo" class="section5__image" src="{{ "/assets/images/night.png" | relative_url }}" />
+				<img alt="night logo" class="section5__image" src="{{ "/assets/images/night.webp" | relative_url }}" />
 			</div>
 
 			<div class="section__cta">
