--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -147,7 +147,7 @@ button {
         margin-bottom: 20px;
     }
 
-    .section1__trade-panel,
+    .section1__image,
     .section2__image,
     .section3__image,
     .section4__night
