--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div>
-			<img width="1500" alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.webp" | relative_url }}" />
+			<img width="1500" height="1500" alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.webp" | relative_url }}" />
 		</div>
 	</div>
 
