fix image sizes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
 				<br>
 				Currencies:
 			</div>
-			<img alt="supported currencies" src="{{ "/assets/images/supported_currencies.webp" | relative_url }}" />
+			<img width="1253" height="582" alt="supported currencies" src="{{ "/assets/images/supported_currencies.webp" | relative_url }}" />
 
 			<div class="section__cta">
 				<span class="glow">
@@ -116,7 +116,7 @@
 			</div>
 		</div>
 		<div>
-			<img alt="nmoney coin" class="section3__image" src="{{ "/assets/images/nmoney.webp" | relative_url }}" />
+			<img width="1040" height="1003" alt="nmoney coin" class="section3__image" src="{{ "/assets/images/nmoney.webp" | relative_url }}" />
 		</div>
 	</div>
 
@@ -137,7 +137,7 @@
 			payouts. This lets winners cash out their positions after they successfuly end a bet.
 		</div>
 
-		<img alt="simulation" src="{{ "/assets/images/simulation.webp" | relative_url }}" />
+		<img width="1294" height="621" alt="simulation" src="{{ "/assets/images/simulation.webp" | relative_url }}" />
 	</div>
 
 	<hr>
@@ -174,7 +174,7 @@
 
 	<div class="nav">
 		<div class="logo">
-			<img alt="footer logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
+			<img width="200" height="200" alt="footer logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
 			Night.WIN
 		</div>
 		<div class="menu">
