--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="nav">
 		<div class="logo">
-			<img alt="navigation logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
+			<img width="150" height="150" alt="navigation logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
 			Night.WIN
 		</div>
 		<div class="menu">
