fix last width/height

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,7 +145,7 @@
 	<div class="section">
 		<div class="section4__night">
 			<div>
-				<img alt="night logo" class="section5__image" src="{{ "/assets/images/night.webp" | relative_url }}" />
+				<img width="200" height="200" alt="night logo" class="section5__image" src="{{ "/assets/images/night.webp" | relative_url }}" />
 			</div>
 
 			<div class="section__cta">
@@ -174,7 +174,7 @@
 
 	<div class="nav">
 		<div class="logo">
-			<img width="200" height="200" alt="footer logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
+			<img width="150" height="150" alt="footer logo" class="img" src="{{ "/assets/images/nav_logo.svg" | relative_url }}" />
 			Night.WIN
 		</div>
 		<div class="menu">
