--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 				</span>
 			</div>
 		</div>
-		<div>
+		<div style="width: 180%;">
 			<img width="1021" height="937" alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.webp" | relative_url }}" />
 		</div>
 	</div>
