--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 				</span>
 			</div>
 		</div>
-		<div style="width: 180%;">
+		<div class="section1__image-container" style="width: 180%;">
 			<img width="1021" height="937" alt="trading view" class="section1__image" src="{{ "/assets/images/trade_panel.webp" | relative_url }}" />
 		</div>
 	</div>
@@ -144,7 +144,7 @@
 	<hr>
 
 	<div class="section">
-		<div>
+		<div class="section5__image-container" style="margin-right: 10%;">
 			<img width="200" height="200" alt="night logo" class="section5__image" src="{{ "/assets/images/night.webp" |
 				relative_url }}" />
 		</div>
